--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,19 +1,40 @@
-{
-   "name": "default",
-   "type": "mysql",
-   "host": "localhost",
-   "port": 3306,
-   "username": "root",
-   "password": "password",
-   "database": "development_db",
-   "synchronize": true,
-   "logging": false,
-   "entities": ["src/domain/entities/**/*.ts"],
-   "migrations": ["src/migration/**/*.ts"],
-   "subscribers": ["src/subscriber/**/*.ts"],
-   "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
+[
+   {
+      "name": "production",
+      "type": "mysql",
+      "host": "localhost",
+      "port": 3306,
+      "username": "root",
+      "password": "password",
+      "database": "development_db",
+      "synchronize": true,
+      "logging": false,
+      "entities": ["src/domain/entities/**/*.ts"],
+      "migrations": ["src/data/migration/**/*.ts"],
+      "subscribers": ["src/data/subscriber/**/*.ts"],
+      "cli": {
+         "entitiesDir": "src/entity",
+         "migrationsDir": "src/migration",
+         "subscribersDir": "src/subscriber"
+      }
+   },
+   {
+      "name": "development",
+      "type": "mysql",
+      "host": "localhost",
+      "port": 3306,
+      "username": "root",
+      "password": "password",
+      "database": "development_db",
+      "synchronize": true,
+      "logging": false,
+      "entities": ["src/domain/entities/**/*.ts"],
+      "migrations": ["src/data/migration/**/*.ts"],
+      "subscribers": ["src/data/subscriber/**/*.ts"],
+      "cli": {
+         "entitiesDir": "src/entity",
+         "migrationsDir": "src/migration",
+         "subscribersDir": "src/subscriber"
+      }
    }
-}
+]
