--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-   "name": "new-typeorm-project",
+   "name": "denstuk-default-typescript",
    "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
+   "description": "Default project.",
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
+      "@types/supertest": "^2.0.10",
+      "supertest": "^5.0.0",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
@@ -12,12 +15,19 @@
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "inversify": "^5.0.1",
+      "module-alias": "^2.2.2",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.25"
    },
+   "_moduleAliases": {
+      "@root": "./src"
+   },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "NODE_ENV=production ts-node src/index.ts",
+      "dev": "NODE_ENV=development ts-node-dev src/index.ts",
+      "ci": "NODE_ENV=ci",
+      "test": "NODE_ENV=test jest"
    }
 }
