--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,10 @@
       "sourceMap": true,
       "esModuleInterop": true,
       "strict": true,
-      "strictPropertyInitialization": false
+      "strictPropertyInitialization": false,
+      "baseUrl": ".",
+      "paths": {
+         "@root/*": ["src/*"]
+      }
    }
 }
