--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/compression": "^1.7.0",
+      "@types/cors": "^2.8.8",
       "@types/express": "^4.17.8",
+      "@types/helmet": "^4.0.0",
+      "@types/jsonwebtoken": "^8.5.0",
+      "class-transformer": "^0.3.1",
+      "class-validator": "^0.12.2",
+      "compression": "^1.7.4",
+      "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "helmet": "^4.1.1",
       "inversify": "^5.0.1",
+      "jsonwebtoken": "^8.5.1",
       "module-alias": "^2.2.2",
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
